Changes to squid-1.0.9 (August 22, 1996):

	- Cleaned up ipcache_purgerlu().
	- Fixed ipcache_gethostbyname() to release expired entries.
	- Added check for numeric addresses to ipcache_nbgethostbyname().
	- Added Date: field to ftpget's HTTP header output.
	- Added temporary hack to httpProcessReplyHeaders() to allow
	  caching of non-HTTP objects fetched from neighbors when
	  the header does not have Date, Expires, or Last-Modified.
	- Added a check for a valid ICP socket before sending ICP
	  queries.
	- Fixed SSL code to unregister DNS lookups if client aborts.
	- Removed lib/host_cache.c from distribution.
	- Made IP cache stats output sorted by last reference.
	- Added ICP internet-draft to docs directory.

Changes to squid-1.0.8 (August 19, 1996):

	- Added ftpget fixes from carson@lehman.com and moy@parc.xerox.com.
	- Fixed -s option to enable syslog logging.
	- Added 'err_html_text' for configurable error messages.
	- Fixed protoDispatchDNSHandle() to not try a direct fetch if
	  host is beyond firewall_ip list.
	- Changed storeDirClean() to handle one directory per call and
	  not keep the dirhandle open between calls.
	- Changed .zip MIME type to "application/x-zip-compressed".
	- Added new 'url_regex' ACL type, regular expression match over
	  the whole URL.
	- Removed xrealloc() call from storeClientListAdd().

Changes to squid-1.0.7 (August 14, 1996):

	- Added "store_clean" routines to periodically remove orphaned
	  swap files.
	- Increased StoreEntry->method_t from 3 to 4 bits, probably fixes
	  storeGenerate*Key() coredumps.
	- Added debugging to examine_select().
	- Added peer address to debugging for Ignored ICP packets.

Changes to squid-1.0.6 (August 12, 1996):

	- Fixed coredump in icpStateFree() for bad requests.
	- Fixed configure bug in determining FD_SETSIZE.
	- Fixed garbage collection to stop if SIGTERM received.
	- Fixed pid file to be written just before 'ready to serve requests'.
	- Fixed CheckQuickAbort() lock_count bug.