@@ -1,3 +1,9 @@
+	- Forced INADDR_NONE to be defined in ftpget.c.
+	- Remove "Connection: Keep-Alive" lines from HTTP requests
+	  since Squid doesn't support them.
+	- Fixed IP Address/netmask bug.  Now 1.2.3.4/255.255.255.0 is
+	  equivalent to 1.2.3.0/255.255.255.0.
+
 Changes to squid-1.0.9 (August 22, 1996):
 
 	- Cleaned up ipcache_purgerlu().
